# bioinf.inf

./: .gitignore  .mise.toml
UE2025-03-06/: Semester-2_Exercise-01.cpp  Semester-2_Exercise-01.sln  Semester-2_Exercise-01.vcxproj  Semester-2_Exercise-01.vcxproj.filters
common/: components.typ  template.typ
common/tasks/: sem-3.toml
common/visualization/: code_metrics.typ  linked_lists.typ  mergesort.typ  rational_numbers.typ  test_results.typ
sem-2_exercise-01/: Tim_Peko_FDS2_Ue01_Solution.typ
sem-2_exercise-01/example_01/: example_01.cpp  example_01.sln  example_01.vcxproj  (+1 more)
sem-2_exercise-02/: TimPeko_Uebung02.rar  Tim_Peko_FDS2_Ue02.typ
sem-2_exercise-03/: FDS_Peko_Ue03.typ
sem-2_exercise-04/: FDS_Peko_Ue04.typ
sem-2_exercise-05/: FDS_Peko_Ue05.typ
sem-2_exercise-06/: FDS_Peko_Ue06.typ
sem-2_exercise-07/: FDS_Peko_Ue07.typ
sem-2_exercise-08/: FDS_Peko_Ue08.typ
sem-2_exercise-09/: FDS_Peko_Ue09.typ  create_charts.py  requirements.txt
sem-2_exercise-10/: FDS_Peko_Ue10.typ  create_charts.py  requirements.txt
sem-3_UE2025-10-20/: SWE3_Peko_UE2025-10-20.typ
sem-3_exercise-01/: SWE3_Peko_UE01.typ  SWE_Peko_UE01.typ
sem-3_exercise-02/: SWE3_Peko_UE02.typ  mise.toml
sem-3_exercise-02/rust_peko_s3ue02/: Cargo.toml
sem-3_exercise-02/rust_peko_s3ue02/src/: file_buffer.rs  in_memory.rs  main.rs  merge_sort.rs  utils.rs
sem-3_exercise-03/: SWE3_Peko_UE03.typ  mise.toml
sem-3_exercise-04/: SWE3_Peko_UE04.typ  mise.toml
sem-3_exercise-05/: SWE3_Peko_UE05.typ  mise.toml
sem-3_exercise-06/: SWE3_Peko_UE06.typ  mise.toml
(+197 files in other folders)
