[package]
name = "rust_peko_s3ue02"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
debug = false
rpath = false
overflow-checks = false

[dependencies]
rand = { version = "0.9.2" }
rand_distr = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["system", "multithread"] }
tempfile = "3"
